<?xml version="1.0"?>
<package>
  <name>kinect_topdownview</name>
  <version>0.0.0</version>
  <description>Kinect processing nodelet</description>
  <maintainer email="dwyer2bp@gmail.com">Brian</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>

	<build_depend>nodelet</build_depend>
	<run_depend>nodelet</run_depend>
	<export>
		<nodelet plugin="${prefix}/KinectTopDownView.xml" />
	</export>

</package>
